--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.0.0",
     "fs": "^0.0.1-security",
+    "gsap": "^3.11.5",
     "markdown-it": "^13.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -23,6 +24,7 @@
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "remarkable": "^2.0.1",
+    "three": "^0.152.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
